--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,16 +4,40 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.0.0-348.0.dev <4.0.0'
+  sdk: '>=3.0.1 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
+  cupertino_icons: ^1.0.2
+
+  json_annotation: ^4.8.1
+  freezed_annotation: ^2.2.0
+  theme_tailor_annotation: ^2.0.0
+
+  intl: ^0.18.0
+  google_fonts: ^4.0.4
+
+  flutter_riverpod: ^2.3.6
+  app_runner: ^2.2.0+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
+  lints: ^2.1.0
+  custom_lint: ^0.4.0
+  riverpod_lint: ^1.3.2
+
+  build_runner: ^2.4.4
+  flutter_gen_runner: ^5.3.1
+  json_serializable: ^6.7.0
+  retrofit_generator: ^7.0.1 
+  freezed: ^2.3.4
+  theme_tailor: ^2.0.0
+
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
