--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   app_runner: ^2.2.0+1
   fluent_ui: ^4.6.1
   dyn_mouse_scroll: ^1.0.7
+  go_router: ^7.1.1
 
 
 
@@ -45,6 +46,7 @@ dev_dependencies:
   theme_tailor: ^2.0.0
 
   flutter_launcher_icons: ^0.13.1
+  go_router_builder: ^2.0.2
 
 
 flutter:
