--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   fluent_ui: ^4.6.1
   dyn_mouse_scroll: ^1.0.7
   go_router: ^7.1.1
+  hive: ^2.2.3
+  path_provider: ^2.0.15
 
 
 
