--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -44,6 +44,7 @@ dev_dependencies:
   build_runner: ^2.4.4
   flutter_gen_runner: ^5.3.1
   freezed: ^2.3.4
+  hive_generator: ^2.0.0
   json_serializable: ^6.7.0
   theme_tailor: ^2.0.0
 
