--- a/plugin/ActBuilder/ActBuilder.csproj
+++ b/plugin/ActBuilder/ActBuilder.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="6.2.4" />
     <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="7.0.0-*" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
